# controllers/authController.js
@@ -7,37 +7,36 @@ const OtpModel = require("../models/OtpModel");
 const { nodemailerOtpHelper, sendEmail } = require("../email/brevo");
 const { validateEmail } = require("../middlewares/validateEmail");
 const constants = require("../utils/constants");
+const { generateOtp } = require("../utils/otp");
+const { generateJwt } = require("../utils/jwtUtil");
 
 const otpLifeTime = process.env.OTP_EXPIRY_DATE;
 
 exports.register = async (req, res) => {
   //   let file;
   try {
-    const { firstName, lastName, email, phone } = req.body;
+    const { firstName, lastName, email, role } = req.body;
 
     const existingEmail = await UserModel.findOne({ email });
-    const existingPhone = await UserModel.findOne({ phone });
 
-    if (existingEmail || existingPhone) {
+    if (existingEmail) {
       return res
         .status(400)
         .json({ message: "User with the credentials already exists" });
     }
 
     if (!validateEmail(email)) {
-      return res.status(400).json({ message: "Please provide a vlide email!" });
+      return res.status(400).json({ message: "Please provide a valid email!" });
     }
 
     const user = new UserModel({
       firstName,
       lastName,
       email,
-      phone,
+      role,
     });
 
-    console.log("I am working!");
-
-    let otp = nodemailerOtpHelper.generateOtp(4);
+    let otp = generateOtp();
 
     const text = `EduFunds Account verification`;
     const html = registrationTemplate(otp);
@@ -46,9 +45,9 @@ exports.register = async (req, res) => {
       subject: "EduFunds Account Registration",
       text,
       html,
-    }); //console.log(otp);
+    });
 
-    otp = jwt.sign({ otp }, process.env.JWT_SECRETE, { expiresIn: constants.otp_expiry });
+    otp = await generateJwt({ otp }, constants.otp_expiry);
 
     await OtpModel.deleteMany({ userId: user._id }); // Delete previous OTPs
     await OtpModel.create({
@@ -62,7 +61,7 @@ exports.register = async (req, res) => {
     console.log(error);
     // if (file && file.path) fs.unlinkSync(file.path);
     res
-      .status(400)
+      .status(500)
       .json({ message: "Internal Server Error", error: error.message });
   }
 };
@@ -76,14 +75,20 @@ exports.login = async (req, res) => {
     }
 
     const user = await UserModel.findOne({ email });
-    console.log(email);
+    // console.log(email);
     if (!user) {
       return res
         .status(404)
         .json({ message: "User not found, please create an account" });
     }
 
-    let otp = nodemailerOtpHelper.generateOtp(4);
+    // if (!user.isVerified) {
+    //   return res.status(500).json({
+    //     message: "User not verified, please verify account to continue",
+    //   });
+    // }
+
+    let otp = await generateOtp();
 
     const text = `EduFunds Account verification`;
     const html = loginOtpTemplate(otp);
@@ -94,7 +99,75 @@ exports.login = async (req, res) => {
       html,
     });
 
-    otp = jwt.sign({ otp }, process.env.JWT_SECRETE, { expiresIn: constants.otp_expiry });
+    otp = await generateJwt({ otp }, constants.otp_expiry);
+
+    await OtpModel.deleteMany({ userId: user._id }); // Delete previous OTPs
+    await OtpModel.create({
+      userId: user._id,
+      otp,
+    });
+
+    // console.log(otp);
+    res
+      .status(200)
+      .json({ message: "OTP sent successfully, check your email" });
+  } catch (error) {
+    console.log(error);
+    res
+      .status(500)
+      .json({ message: "Internal Server Error", error: error.message });
+  }
+};
+
+exports.verifyOtp = async (req, res) => {
+  try {
+    const { userId } = req.params;
+    const { otp } = req.body;
+
+    const user = await UserModel.findById(userId);
+
+    if (!user) {
+      return res
+        .status(404)
+        .json({ message: "User not found, please create an account" });
+    }
+
+    res
+      .status(200)
+      .json({ message: "OTP verification successful ✅", data: user });
+  } catch (error) {
+    console.log(error);
+    res.status(500).json({
+      message: "Internal server error verifying OTP",
+      error: error.message,
+    });
+  }
+};
+
+exports.resendOtp = async (req, res) => {
+  try {
+    const { userId } = req.params;
+
+    const user = await UserModel.findById(userId);
+
+    if (!user) {
+      return res
+        .status(404)
+        .json({ message: "User not found, please create an account" });
+    }
+
+    let otp = generateOtp();
+
+    const text = `EduFunds otp resend request`;
+    const html = loginOtpTemplate(otp);
+    await sendEmail({
+      email: user.email,
+      subject: "EduFunds Account Login",
+      text,
+      html,
+    });
+
+    otp = generateJwt({ otp }, constants.otp_expiry);
 
     await OtpModel.deleteMany({ userId: user._id }); // Delete previous OTPs
     await OtpModel.create({
@@ -107,35 +180,39 @@ exports.login = async (req, res) => {
   } catch (error) {
     console.log(error);
     res
-      .status(400)
+      .status(500)
       .json({ message: "Internal Server Error", error: error.message });
   }
 };
 
-exports.verifyAuth = async (req, res) => {
+exports.verifyUser = async (req, res) => {
   try {
     const { userId } = req.params;
 
     const user = await UserModel.findById(userId);
+
     if (!user) {
       return res
         .status(404)
         .json({ message: "User not found, please create an account" });
     }
 
-    token = jwt.sign({ id: userId }, process.env.JWT_SECRETE, {
-      expiresIn: `1d`,
-    });
-
-    if (!user.isVerified) user.isVerified = true;
-    user.token = token;
+    if (user.isVerified) {
+      return res.status(403).json({
+        message: "User already verified, please login to continue",
+      });
+    }
+    Object.assign(user, { isVerified: true });
     await user.save();
 
-    res.status(200).json({ message: "User verified successful", data: user });
+    res
+      .status(200)
+      .json({ message: "User verification successful ✅", data: user });
   } catch (error) {
     console.log(error);
-    res
-      .status(400)
-      .json({ message: "Internal Server Error", error: error.message });
+    res.status(500).json({
+      message: "Internal server error verifying user",
+      error: error.message,
+    });
   }
 };
