# controllers/userController.js
@@ -1,207 +1,136 @@
-const userModel = require("../models/userModel");
-const cloudinary = require("../config/cloudinary");
-const bcrypt = require("bcrypt");
-const { registerOTP } = require("../utils/email");
-const { sendMail } = require("../utils/nodemailer");
-const jwt = require("jsonwebtoken");
-const {nodemailerOtpHelper} = require("../email/brevo");
+const UserModel = require("../models/userModel");
+const {hashData} = require("../utils/bcryptUtil");
 
-exports.register = async (req, res) => {
+exports.createUser = async (req, res) => {
   try {
-    const { fullName, email, password, confirmPassword, age, phoneNumber } =
-      req.body;
-    const existUser = await userModel.findOne({ email: email.toLowerCase() });
-
-    if (existUser) {
-      return res.status(400).json({
-        message: "User already exist",
-      });
-    }
-
-    const salt = await bcrypt.genSalt(10);
-    const hashPassword = await bcrypt.hash(password, salt);
-    const otp = Math.round(Math.random() * 1e6)
-      .toString()
-      .padStart(6, "0");
-
-    const user = new userModel({
-      fullName,
+    const { firstName, lastName, email, password, role } = req.body;
+    const hashedPassword = hashData(password);
+    const student = new UserModel({
+      firstName,
+      lastName,
       email,
-      password: hashPassword,
-      age,
-      phoneNumber: `+234${phoneNumber.slice(1)}`,
-      otp: otp,
-      otpExpiredAt: Date.now() + 1000 * 120,
+      password:hashedPassword,
+      role
     });
-
-    const detail = {
-      email: user.email,
-      subject: "Email Verification",
-      html: registerOTP(user.otp, `${user.fullName.split(" ")[0]}`),
-    };
-
-    await sendMail(detail);
-    await user.save();
-    const response = {
-      fullName: user.fullName,
-      email: user.email,
-    };
+    await student.save();
     res.status(201).json({
-      message: "User created successfully",
-      data: response,
+      message: `${role} created successfully`,
+      data: student,
     });
   } catch (error) {
     res.status(500).json({
-      mesaage: "Error creating user" + error.message,
+      message: `Server error creating ${role}`,
+      error: error.message,
     });
   }
 };
 
-exports.verify = async (req, res) => {
+exports.updateUser = async (req, res) => {
   try {
-    const { otp, email } = req.body;
-    const user = await userModel.findOne({ email: email.toLowerCase() });
-
+    const { userId } = req.params;
+    const { firstName, lastName, email, password, role } = req.body;
+    const user = await UserModel.findById(userId);
     if (!user) {
       return res.status(404).json({
-        message: "user not found",
+        message: "User not found, please create an account",
       });
     }
-
-    if (Date.now() > user.otpExpiredAt) {
-      return res.status(400).json({
-        message: "OTP expired",
-      });
-    }
-
-    if (otp !== user.otp) {
-      return res.status(400).json({
-        message: "Invalid otp",
-      });
-    }
-
-    Object.assign(user, { isVerified: true, otp: null, otpExpiredAt: null });
+    Object.assign(user, {
+      firstName,
+      lastName,
+      email,
+      password,
+      role
+    });
     await user.save();
     res.status(200).json({
-      message: "User verified successfully",
+      message: "User updated successfully",
+      data: user,
     });
   } catch (error) {
     res.status(500).json({
-      mesaage: "Error verifying user" + error.message,
+      message: "Server error updating user",
+      error: error.message,
+    })
+  }
+}
+
+exports.deleteUser = async (req, res) => {
+  try {
+    const { userId } = req.params;
+    const user = await UserModel.findById(userId);
+    if (!user) {
+      return res.status(404).json({
+        message: "User not found, please create an account",
+      });
+    }
+    await UserModel.findByIdAndDelete(userId);
+    res.status(200).json({
+      message: "User deleted successfully",
+    });
+  } catch (error) {
+    res.status(500).json({
+      message: "Server error deleting user",
+      error: error.message,
     });
   }
 };
 
-exports.resendOtp = async (req, res) => {
+exports.getUser = async (req, res) => {
+  try {
+    const { userId } = req.params;
+    const user = await UserModel.findById(userId);
+    if (!user) {
+      return res.status(404).json({
+        message: "User not found, please create an account",
+      });
+    }
+    res.status(200).json({
+      message: "User found successfully",
+      data: user,
+    });
+  } catch (error) {
+    res.status(500).json({
+      message: "Server error getting user",
+      error: error.message,
+    });
+  }
+};
+
+exports.getAllUsers = async (req, res) => {
+  try {
+    const users = await UserModel.find();
+    const total = users.length;
+    res.status(200).json({
+      message: total<1 ? "No users found" : "Users found successfully",
+      total,
+      data: users,
+    });
+  } catch (error) {
+    res.status(500).json({
+      message: "Server error getting users",
+      error: error.message,
+    });
+  }
+};
+
+exports.getUserByEmail = async (req, res) => {
   try {
     const { email } = req.body;
-    const user = await userModel.findOne({ email: email.toLowerCase() });
-
+    const user = await UserModel.findOne({ email });
     if (!user) {
       return res.status(404).json({
-        message: "user not found",
+        message: "User not found, please create an account",
       });
     }
-
-    const otp = nodemailerOtpHelper.generateOtp(6);
-
-    Object.assign(user, { otp: otp, otpExpiredAt: Date.now() + 1000 * 120 });
-
-    const detail = {
-      email: user.email,
-      subject: "Resend: Email Verification",
-      html: registerOTP(user.otp, `${user.fullName.split(" ")[0]}`),
-    };
-
-    await sendMail(detail);
-    await user.save();
     res.status(200).json({
-      message: "Otp sent, kindly check your email",
+      message: "User found successfully",
+      data: user,
     });
   } catch (error) {
     res.status(500).json({
-      mesaage: "Error resending otp" + error.message,
-    });
-  }
-};
-
-exports.login = async (req, res) => {
-  try {
-    const { email, password } = req.body;
-    const user = await userModel.findOne({ email: email.toLowerCase() });
-    if (user === null) {
-      return res.status(404).json({
-        message: "User not found",
-      });
-    }
-    const passwordCorrect = await bcrypt.compare(password, user.password);
-    if (passwordCorrect === false) {
-      return res.status(400).json({
-        message: "Invalid Password",
-      });
-    }
-
-    if (user.isVerified === false) {
-      return res.status(400).json({
-        message: "User not verified, Please verify your account to continue",
-      });
-    }
-
-    const token = await jwt.sign(
-      {
-        id: user._id,
-        email: user.email,
-        isAdmin: user.isAdmin,
-      },
-      process.env.JWT_SECRETE,
-      { expiresIn: "1d" }
-    );
-
-    // Send a success response
-    res.status(200).json({
-      message: "Login successful",
-      data: user.fullName,
-      token,
-    });
-  } catch (error) {
-    res.status(500).json({
-      message: "Error logging in: " + error.mesaage,
-    });
-  }
-};
-
-exports.getAll = async (req, res) => {
-  try {
-    const allUsers = await userModel.find();
-    res.status(200).json({
-      message: `All users available and the total is: ${allUsers.length}`,
-      data: allUsers,
-    });
-  } catch (error) {
-    res.status(500).json({
-      message: "Error fetching all users: " + error.mesaage,
-    });
-  }
-};
-
-exports.makeAdmin = async (req, res) => {
-  try {
-    const { id } = req.params;
-    const user = await userModel.findById(id);
-    if (user === null) {
-      return res.status(404).json({
-        message: "User not found",
-      });
-    }
-    user.isAdmin = true;
-
-    await user.save();
-    res.status(200).json({
-      message: "User role updated to an Admin",
-    });
-  } catch (error) {
-    res.status(500).json({
-      message: "Error making user an Admin: " + error.mesaage,
+      message: "Server error getting user",
+      error: error.message,
     });
   }
 };
